Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
-<!-- Write your HTML in this file -->
+<!Doctype html>
+<html lang="en">
+  <head>
+    <link rel="stylesheet"
+    type="text/css"
+    href="style.css">
+    <title> Cat Perry
+  Favourite cats</title>
+  </head>
+  <body>
+  </body>
+</html>
+  
+  
 
